# ceph-backup

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build  build-push
k8s/: backup.cronjob.yaml  target.deploy.yaml
src/: expiry.rs  lib.rs  main.rs  rbd.rs  semaphore.rs
src/rbd/: source.rs  target.rs
