[package]
name = "ceph-backup"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 's'
lto = true

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive", "env"] }
crossbeam-channel = "0.5.14"
ctrlc = { version = "3.4.5", features = ["termination"] }
duct = "0.13.7"
env_logger = "0.11.6"
eyre = "0.6.12"
glob-match = "0.2.1"
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
zstd = "0.13.2"
